[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/characters/jevil/spr_jevil_devilsknife.png" type="Texture" id=1]
[ext_resource path="res://objects/battle/projectiles/jevil/projFinalDevilsKnife.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0217

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 539 )

[node name="projFinalDevilsKnife" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="mainCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="explodeCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="explosionSprite" type="Node2D" parent="."]
scale = Vector2( 1e-05, 1 )

[node name="ColorRect" type="ColorRect" parent="explosionSprite"]
margin_left = -19.0
margin_top = -386.0
margin_right = 21.0
margin_bottom = 386.0
color = Color( 0.67451, 0.882353, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
